<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Facebook APP_ID -->
    <string name="facebook_app_id">148006165553646</string>

    <string name="app_name">Amplified Bible</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pick_epub">Pick Book</string>
    <string name="menu_chapters">Chapters</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_search">Search</string>
    <string name="no_epub_found">No epub files Found</string>
    <string name="sd_card_not_mounted">SD card not mounted</string>
    <string name="epub_title">Title</string>
    <string name="no_book_selected">No book selected</string>
    <string name="not_implemented">Not implemented</string>
    <string name="something_is_badly_broken">Something is badly broken</string>
    <string name="end_of_book">End of book</string>
    <string name="bookmark_dialog_title">Set/Restore Bookmark</string>
    <string name="bookmark_dialog_set_button">Set Bookmark</string>
    <string name="bookmark_dialog_goto_button">Goto Bookmark</string>
    <string name="bookmark_dialog_start_speech">Start Speech</string>
    <string name="bookmark_dialog_stop_speech">Stop Speech</string>
    <string name="options_menu_title">Options</string>
    <string name="text_to_speech_not_installed">Text To Speech not installed</string>
    <string name="table_of_contents_missing">Table of Contents not found</string>
    <string name="christ_elect_">"Christ Elect "</string>
    <string name="browsing_the_bible_">Browsing the Bible:</string>
    <string name="a_quick">A quick way to browse to the passage youre looking for is to use the Bible menu at the top of the page. From here, you\'ll see every book of the Bible, arranged by Old and New Testament, as well as their chapter numbers.</string>
    <string name="searching_">Searching:</string>
    <string name="you_can">You can also search for specific passages, as well as key words, from the search bar at the top of the page.\n\nWe\'re always adding more content, so check back often to see all the new resources and plans.\n\n\nMuch obliged to you for downloading and utilizing the Bile App. Christ Elect main goal is to motivate individuals to interface with God and the Bible through technology.We accept that our application does that and we trust that your involvement with our application is enhancing and satisfying.\n\nIn the event that you can\'t discover an answer in this client guide, you can demand help from messaging backing at:\n\nsupport@christelect.com</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dialog_note_title">Note</string>
    <string name="dialog_note_hint">Type note here</string>
    <string name="note_count_format">%d note(s)</string>
    <string name="verse_count_format">%d verse(s)</string>
</resources>
